k8s/apps/validation-app/workload-identity-python-test-pod_v3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wi-kv-test
  namespace: apps
  labels:
    azure.workload.identity/use: "true"
spec:
  serviceAccountName: wi-keyvault-reader
  nodeSelector:
    nodepool-role: user
  restartPolicy: Never
  containers:
  - name: python
    image: python:3.11-slim
    command: ["bash"]
    stdin: true
    tty: true
