k8s/apps/validation-app/workload-identity-test-pod_v2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wi-kv-test
  namespace: apps
  labels:
    azure.workload.identity/use: "true"
spec:
  serviceAccountName: wi-keyvault-reader
  nodeSelector:
    nodepool-role: user
  restartPolicy: Never
  containers:
  - name: azure-cli
    image: mcr.microsoft.com/azure-cli:latest
    command: ["bash"]
    stdin: true
    tty: true
